changes in Layout

--- a/public/index.html
+++ b/public/index.html
@@ -112,135 +112,103 @@
   <!-- Footer -->
   <footer class="page-footer font-small bg-dark text-white">
 
-    <div style="background-color: #1c1f64;color:white;border-top:0.5px solid white;border-bottom:0.5px solid white;">
+    <div class="siga-nos-bar">
       <div class="container">
-
-        <!-- Grid row-->
         <div class="row py-4 d-flex align-items-center">
-          <!-- Grid column -->
           <div class="col-sm-12 col-xs-12 col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 ">
             <h5 class="mb-0 siga-text">Siga-nos nas redes sociais.</h6>
           </div>
-          <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
-            <!-- Facebook -->
             <a href="https://www.facebook.com/ajepelembalagens/" target="_blank" class="fb-ic mr-1">
               <i class="fab fa-2x fa-facebook-square"></i>
             </a>
-            <!--Instagram-->
             <a href="https://www.instagram.com/ajepel/" target="_blank" class="ins-ic mr-1">
               <i class="fab fa-2x fa-instagram"></i>
             </a>
-            <!-- href="intent://send/0123456789#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"> -->
             <a href="#" data-toggle="modal" data-target="#wp-pop" class="wp-ic mr-1">
               <i class="fab fa-2x fa-whatsapp"></i>
             </a>
           </div>
-          <!-- Grid column -->
-
         </div>
-        <!-- Grid row-->
-
       </div>
     </div>
 
     <!-- Footer Links -->
-    <div class="container text-center text-md-left mt-5">
-
-      <!-- Grid row -->
-      <div class="row mt-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+    <div class="container text-center text-md-left mt-4">
+      <div class="row">
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-1">
 
           <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Ajepel Embalagens</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+
+          <h6 class="text-uppercase text-center font-weight-bold">Ajepel Embalagens</h6>
+          <hr class="mb-1 mt-0 d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p>Aqui vai o slogan ou frase curta a respeito da empresa</p>
-
         </div>
-        <!-- Grid column -->
+        <div class="col-6 col-md-2 col-lg-2 col-xl-2 mx-auto mb-1">
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links  Social-->
 
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Redes Sociais</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+          <p class="text-uppercase text-center font-weight-bold my-auto">Redes Sociais</p>
+          <hr class=" mb-1 d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p>
-            <a href="https://www.facebook.com/ajepelembalagens/" target="" class="text-white">Facebook</a>
+            <a href="https://www.facebook.com/ajepelembalagens/" target="_blank" class="text-white">Facebook</a>
           </p>
+
           <p>
             <a href="https://www.instagram.com/ajepel/" target="_blank" class="text-white">Instagram</a>
           </p>
 
-        </div>
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Menu</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
-          <p>
-            <a href="index.html" class="text-white">Home</a>
-          </p>
-          <p>
-            <a href="sobre.html" id="sobre-btn2" class="text-white">Sobre</a>
-          </p>
-          <p>
-            <a href="produtos.html" id="servicos-btn2" class="text-white">Produtos</a>
-          </p>
-          <p>
-            <a href="contato.html" id="contato-btn2" class="text-white">Contato</a>
-          </p>
+          <!-- Links  Menu-->
 
         </div>
-        <!-- Grid column -->
+        <div class="col-6 col-md-3 col-lg-2 col-xl-2 mx-auto mb-1">
+          <h6 class="text-uppercase text-center font-weight-bold">Menu</h6>
+          <hr class="mb-1 mt-0 d-inline-block mx-auto" style="width: 100%;border-color:white">
+          <p><a href="index.html" class="text-white">Home</a></p>
+          <p><a href="sobre.html" id="sobre-btn2" class="text-white">Sobre</a></p>
+          <p><a href="produtos.html" id="servicos-btn2" class="text-white">Produtos</a></p>
+          <p><a href="contato.html" id="contato-btn2" class="text-white">Contato</a></p>
+        </div>
 
-        <!-- Grid column -->
+        <!-- Contact area  -->
+
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Contato</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+          <h6 class="text-uppercase text-center font-weight-bold">Contato</h6>
+          <hr class="d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p><a id="footer-links" href="mailto:contato@ajepel.com.br"><i class="fa fa-lg fa-envelope mr-3"></i>contato@ajepel.com.br</a></p>
           <a id="footer-links" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999014810">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999167080">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
               <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <p><i class="fa fa-lg fa-map-marker-alt mr-3"></i>R: Antônio Santiago da Silva, 110 - XV de Novembro - Tijucas, SC 88200-000</p>
-
         </div>
-        <!-- Grid column -->
-
       </div>
-      <!-- Grid row -->
-
     </div>
-    <!-- Footer Links -->
-    <!-- Copyright -->
+
+    <!-- Copyright  -->
     <div class="footer-copyright text-center py-3" style="border-top:0.5px solid white">© 2019 Copyright | Ajepel Embalagens | by
       <a href="https://au.linkedin.com/in/ricardo-furtado-48a9996b" target="_blank" class="text-white">Ricardo Furtado</a>
     </div>
     <div class="footer-copyright-small text-center py-3" style="border-top:0.5px solid white">© 2019 Copyright | Ajepel Embalagens <br> by
       <a href="https://au.linkedin.com/in/ricardo-furtado-48a9996b" target="_blank" class="text-white">Ricardo Furtado</a>
     </div>
-    <!-- Copyright -->
-
   </footer>
-  <!-- Footer -->
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="js/index.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
