--- a/public/produtos.html
+++ b/public/produtos.html
@@ -51,22 +51,21 @@
   </nav>
 
 
-  <!--Produtos / areas de atendimento-->
+  <!--Produtos -->
 
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="produtos-page">
     <div class="container">
 
       <!-- <div class="alert alert-warning text-center" role="alert">
         <i class="fas  fa-lg fa-exclamation-triangle"></i>
-        Essa pagina encontra em processo de desenvolvimento. Pedimos desculpas pelo incoveniente.
+        Essa pagina encontra em processo de desenvolvimento/manutencao. Pedimos desculpas pelo incoveniente.
         <i class="fas fa-lg fa-exclamation-triangle"></i>
       </div> -->
 
       <h1 class="display-4 title-page-text animated fadeInLeftBig">Produtos</h1>
       <hr class="linha">
-      <p class="lead animated fadeInRightBig ">- Temos a solucao certa para voce e seu negocio,entre nossos produtos dispomos de :</p>
-
-
+      <p class="lead animated fadeInRightBig produtos-text-phrase"> Temos a solucao certa para voce e seu negocio, segue abaixo catalogo listado por categoria de produto.</p>
+      <div class="container">
       <div class="row mb-2">
         <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
           <button id="btn1" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
@@ -141,13 +140,14 @@
         </div>
       </div>
     </div>
+  </div>
 
 
     <!-- Secao celofane -->
     <div class="container">
-      <div id="celofane">
+      <div id="celofane" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Celofane</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Celofane</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -164,9 +164,9 @@
       </div>
 
       <!-- Secao cupom -->
-      <div id="cupom">
+      <div id="cupom" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Cupom</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Cupom</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -194,9 +194,9 @@
       </div>
 
       <!-- Secao Descartaveis -->
-      <div id="descartaveis">
+      <div id="descartaveis" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Descartaveis</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Descartaveis</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -363,9 +363,9 @@
       </div>
 
       <!-- Secao Embalagem para presentes  -->
-      <div id="embalagens">
+      <div id="embalagens" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Embalagens p Presentes</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Embalagens p Presentes</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -786,9 +786,9 @@
         </div>
 
       <!-- Secao Escritorio -->
-      <div id="escritorio">
+      <div id="escritorio" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Escritorio</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Escritorio</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1456,9 +1456,9 @@
       </div>
 
       <!-- Secao Etiquetas -->
-      <div id="etiquetas">
+      <div id="etiquetas" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Etiquetas</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Etiquetas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1676,9 +1676,9 @@
 
 
       <!-- Secao Fitas -->
-      <div id="fitas">
+      <div id="fitas" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Fitas</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Fitas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1743,9 +1743,9 @@
 
 
       <!-- Secao Limpeza -->
-      <div id="limpeza">
+      <div id="limpeza" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Limpeza</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Limpeza</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1840,9 +1840,9 @@
       </div>
 
       <!-- Secao Maquinas e Suportes  -->
-      <div id="maquinas">
+      <div id="maquinas" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Maquinas e Suportes</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Maquinas e Suportes</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1961,9 +1961,9 @@
       </div>
 
       <!-- Secao plastico bolha -->
-      <div id="plastico">
+      <div id="plastico" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Plastico Bolha</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Plastico Bolha</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1979,9 +1979,9 @@
       </div>
 
       <!-- Secao Sacolas -->
-      <div id="sacolas">
+      <div id="sacolas" >
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Sacolas</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Sacolas</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -2046,7 +2046,7 @@
       <!-- Secao Sacos -->
       <div id="sacos">
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1">Sacos</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Sacos</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -2175,132 +2175,96 @@
   <!-- Footer -->
   <footer class="page-footer font-small bg-dark text-white">
 
-    <div style="background-color: #1c1f64;color:white;border-top:0.5px solid white;border-bottom:0.5px solid white;">
+    <div class="siga-nos-bar">
       <div class="container">
-
-        <!-- Grid row-->
         <div class="row py-4 d-flex align-items-center">
-
-          <!-- Grid column -->
           <div class="col-sm-12 col-xs-12 col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 ">
             <h5 class="mb-0 siga-text">Siga-nos nas redes sociais.</h6>
           </div>
-          <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
-            <!-- Facebook -->
             <a href="https://www.facebook.com/ajepelembalagens/" target="_blank" class="fb-ic mr-1">
               <i class="fab fa-2x fa-facebook-square"></i>
             </a>
-            <!--Instagram-->
             <a href="https://www.instagram.com/ajepel/" target="_blank" class="ins-ic mr-1">
               <i class="fab fa-2x fa-instagram"></i>
             </a>
-            <!-- href="intent://send/0123456789#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end"> -->
             <a href="#" data-toggle="modal" data-target="#wp-pop" class="wp-ic mr-1">
               <i class="fab fa-2x fa-whatsapp"></i>
             </a>
           </div>
-          <!-- Grid column -->
-
         </div>
-        <!-- Grid row-->
-
       </div>
     </div>
 
     <!-- Footer Links -->
-    <div class="container text-center text-md-left mt-5">
-
-      <!-- Grid row -->
-      <div class="row mt-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+    <div class="container text-center text-md-left mt-4">
+      <div class="row">
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-1">
 
           <!-- Content -->
-          <h6 class="text-uppercase font-weight-bold">Ajepel Embalagens</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+
+          <h6 class="text-uppercase text-center font-weight-bold">Ajepel Embalagens</h6>
+          <hr class="mb-1 mt-0 d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p>Aqui vai o slogan ou frase curta a respeito da empresa</p>
-
         </div>
-        <!-- Grid column -->
+        <div class="col-6 col-md-2 col-lg-2 col-xl-2 mx-auto mb-1">
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links  Social-->
 
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Redes Sociais</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+          <p class="text-uppercase text-center font-weight-bold my-auto">Redes Sociais</p>
+          <hr class=" mb-1 d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p>
-            <a href="https://www.facebook.com/ajepelembalagens/" target="" class="text-white">Facebook</a>
+            <a href="https://www.facebook.com/ajepelembalagens/" target="_blank" class="text-white">Facebook</a>
           </p>
+
           <p>
             <a href="https://www.instagram.com/ajepel/" target="_blank" class="text-white">Instagram</a>
           </p>
 
-        </div>
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Menu</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
-          <p>
-            <a href="index.html" class="text-white">Home</a>
-          </p>
-          <p>
-            <a href="sobre.html" id="sobre-btn2" class="text-white">Sobre</a>
-          </p>
-          <p>
-            <a href="produtos.html" id="servicos-btn2" class="text-white">Produtos</a>
-          </p>
-          <p>
-            <a href="contato.html" id="contato-btn2" class="text-white">Contato</a>
-          </p>
+          <!-- Links  Menu-->
 
         </div>
-        <!-- Grid column -->
+        <div class="col-6 col-md-3 col-lg-2 col-xl-2 mx-auto mb-1">
+          <h6 class="text-uppercase text-center font-weight-bold">Menu</h6>
+          <hr class="mb-1 mt-0 d-inline-block mx-auto" style="width: 100%;border-color:white">
+          <p><a href="index.html" class="text-white">Home</a></p>
+          <p><a href="sobre.html" id="sobre-btn2" class="text-white">Sobre</a></p>
+          <p><a href="produtos.html" id="servicos-btn2" class="text-white">Produtos</a></p>
+          <p><a href="contato.html" id="contato-btn2" class="text-white">Contato</a></p>
+        </div>
 
-        <!-- Grid column -->
+        <!-- Contact area  -->
+
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase font-weight-bold">Contato</h6>
-          <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 120px;border-color:white">
+          <h6 class="text-uppercase text-center font-weight-bold">Contato</h6>
+          <hr class="d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p><a id="footer-links" href="mailto:contato@ajepel.com.br"><i class="fa fa-lg fa-envelope mr-3"></i>contato@ajepel.com.br</a></p>
-
           <a id="footer-links" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
-          </a>
-          <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999014810">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999167080">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/610414515970?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <p><i class="fa fa-lg fa-map-marker-alt mr-3"></i>R: Antônio Santiago da Silva, 110 - XV de Novembro - Tijucas, SC 88200-000</p>
-
         </div>
-        <!-- Grid column -->
-
       </div>
-      <!-- Grid row -->
-
     </div>
-    <!-- Footer Links -->
-    <!-- Copyright -->
+
+    <!-- Copyright  -->
     <div class="footer-copyright text-center py-3" style="border-top:0.5px solid white">© 2019 Copyright | Ajepel Embalagens | by
       <a href="https://au.linkedin.com/in/ricardo-furtado-48a9996b" target="_blank" class="text-white">Ricardo Furtado</a>
     </div>
     <div class="footer-copyright-small text-center py-3" style="border-top:0.5px solid white">© 2019 Copyright | Ajepel Embalagens <br> by
       <a href="https://au.linkedin.com/in/ricardo-furtado-48a9996b" target="_blank" class="text-white">Ricardo Furtado</a>
     </div>
-    <!-- Copyright -->
-
   </footer>
-  <!-- Footer -->
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
