changes in Layout

--- a/public/sobre.html
+++ b/public/sobre.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -55,7 +56,8 @@
       <h1 id="page-sub-title" class="display-4 title-page-text animated fadeInLeftBig">Sobre a Ajepel</h1>
       <hr class="linha">
       <img src="images/logo.jpeg" class="img-fluid animated fadeInRightBig delay-1s ml-3 mb-2 sobre-img" alt="Responsive image">
-      <p class="lead animated fadeInLeftBig delay-1s sobre-text">Fundada em 1998 por Osni Gonzaga da Silva, a Ajepel é uma distribuidora de embalagens que atua em Biguaçu, São José, Florianópolis, Palhoça, Antônio Carlos, Santo Amaro, Paulo Lopes, Águas Mornas, Rancho Queimado e Angelina.
+      <p class="lead animated fadeInLeftBig delay-1s sobre-text">Fundada em 1998 por Osni Gonzaga da Silva, a Ajepel é uma distribuidora de embalagens que atua em Biguaçu, São José, Florianópolis, Palhoça, Antônio Carlos, Santo Amaro, Paulo Lopes,
+        Águas Mornas, Rancho Queimado e Angelina.
         Trabalhamos com produtos de qualidade a preços competitivos, visando sempre a satisfação dos nossos clientes.</p>
       <p class="lead animated fadeInLeftBig delay-2s sobre-text">A Ajepel conta com frota própria de veículos e de uma forma programada e ágil leva a mercadoria até você!
         Nossa equipe trabalha para promover a excelência no atendimento, sendo assim, contamos com os seguintes canais de relacionamento: Instagram, Facebook, Whatsapp e Telefones.</p>
@@ -74,17 +76,18 @@
         </div>
         <div class="modal-body pt-3" style="background-color:rgb(3, 3, 3)">
           <br>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="modal-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="modal-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
         </div>
         <div class="modal-footer" style="background-color: #1c1f64;border-top:2px solid white">
@@ -162,16 +165,17 @@
           <hr class="d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p><a id="footer-links" href="mailto:contato@ajepel.com.br"><i class="fa fa-lg fa-envelope mr-3"></i>contato@ajepel.com.br</a></p>
           <a id="footer-links" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <p><i class="fa fa-lg fa-map-marker-alt mr-3"></i>R: Antônio Santiago da Silva, 110 - XV de Novembro - Tijucas, SC 88200-000</p>
         </div>
