--- a/public/contato.html
+++ b/public/contato.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="PT">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -46,14 +47,14 @@
       </ul>
     </div>
   </nav>
-<!-- action="send" -->
+  <!-- action="send" -->
   <!-- Contato area -->
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="contato-page">
     <div class="container">
       <h1 class="display-4 title-page-text">Contato</h1>
       <hr class="linha">
       <p class="lead">Envie-nos uma mensagem! Nos teremos o prazer de ouvir suas críticas, sugestões e elogios. Você pode utilizar o formulário abaixo e enviar a sua solicitação.</p>
-      <form id="form-fields" method="post" >
+      <form id="form-fields" method="post">
         <div class="form-row">
           <div class="col-md-6 col-sm-12 col-xs-12 mb-3">
             <label for="Nome">Nome</label>
@@ -72,7 +73,7 @@
           </div>
           <div class="form-group col-12">
             <label for="Mensagem">Mensagem</label>
-            <textarea class="form-control" id="contato-msg" name="textmsg"rows="3" placeholder="Conte nos sobre seu negocio e como podemos lhe ajudar."></textarea>
+            <textarea class="form-control" id="contato-msg" name="textmsg" rows="3" placeholder="Conte nos sobre seu negocio e como podemos lhe ajudar."></textarea>
             <p class="bg-danger mt-2" id="error-msg">*** Favor preencher esse campo !</p>
           </div>
           <button id="submit-btn" class="btn btn-primary disab" type="submit" onclick="valida();">Enviar Mensagem</button>
@@ -90,7 +91,7 @@
           <a id="links-contato" href="https://www.instagram.com/ajepel/" target="_blank" class="ins-ic col-xs-12 col-sm-12 col-6 col-md-3">
             <i id="contato-alt" class="fab fa-2x fa-instagram"></i><span id="contato-alt-text" class="h5 ml-2">Instagram</span>
           </a>
-          <a id="links-contato" data-toggle="modal" data-target="#wp-pop" href="#"  class="wp-ic col-xs-12 col-sm-12 col-6 col-md-3">
+          <a id="links-contato" data-toggle="modal" data-target="#wp-pop" href="#" class="wp-ic col-xs-12 col-sm-12 col-6 col-md-3">
             <i id="contato-alt" class="fab fa-2x fa-whatsapp"></i><span id="contato-alt-text" class="h5 ml-2">Whatsapp</span>
           </a>
           <a id="links-contato" href="tel:+5548996837078" class="wp-iccol-xs-12 col-sm-12 col-6 col-md-3">
@@ -113,17 +114,18 @@
         </div>
         <div class="modal-body pt-3" style="background-color:rgb(3, 3, 3)">
           <br>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="modal-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="modal-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
         </div>
         <div class="modal-footer" style="background-color: #1c1f64;border-top:2px solid white">
@@ -201,16 +203,17 @@
           <hr class="d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p><a id="footer-links" href="mailto:contato@ajepel.com.br"><i class="fa fa-lg fa-envelope mr-3"></i>contato@ajepel.com.br</a></p>
           <a id="footer-links" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <p><i class="fa fa-lg fa-map-marker-alt mr-3"></i>R: Antônio Santiago da Silva, 110 - XV de Novembro - Tijucas, SC 88200-000</p>
         </div>
@@ -233,6 +236,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="main.js"></script>
-  </body>
+</body>
 
-  </html>
+</html>
