--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -10,7 +11,7 @@
     Nossa equipe trabalha para promover a excelência no atendimento.">
   <meta name="keywords" content="Ajepel,Embalagens,embalagens,sacolas,pacotes,tijucas,queimados,florianopolis">
   <!-- Bootstrap CSS -->
-<link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
@@ -18,6 +19,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <title>Ajepel Embalagens</title>
 </head>
+
 <body>
   <!-- Logo  -->
   <!-- <a <img src="images/logo-samll2.jpeg" class="img-fluid float-right ml-3" alt="Responsive image"></a> -->
@@ -89,17 +91,18 @@
         </div>
         <div class="modal-body pt-3" style="background-color:rgb(3, 3, 3)">
           <br>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548996837078">
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a> <a id="modal-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="modal-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
-          <a  id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
+          <a id="modal-links" class="m-auto text-center" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="modal-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website" target="_blank">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
         </div>
         <div class="modal-footer" style="background-color: #1c1f64;border-top:2px solid white">
@@ -177,16 +180,17 @@
           <hr class="d-inline-block mx-auto" style="width: 100%;border-color:white">
           <p><a id="footer-links" href="mailto:contato@ajepel.com.br"><i class="fa fa-lg fa-envelope mr-3"></i>contato@ajepel.com.br</a></p>
           <a id="footer-links" href="tel:+5548996837078">
-            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078</a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+            <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9683 7078
+          </a><a id="footer-wp-icon" href="https://wa.me/5548996837078?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
+            <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999014810">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9901 4810 <a id="footer-wp-icon" href="https://wa.me/5548999014810?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <a id="footer-links" href="tel:+5548999167080">
             <p><i class="fa fa-lg fa-phone mr-3"></i>(48) 9 9916 7080 <a id="footer-wp-icon" href="https://wa.me/5548999167080?text=---Mensagem%20Automatica---%20Vim%20pelo%20Website">
-              <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
+                <i class="fab fa-lg fa-whatsapp ml-1"></i></p>
           </a>
           <p><i class="fa fa-lg fa-map-marker-alt mr-3"></i>R: Antônio Santiago da Silva, 110 - XV de Novembro - Tijucas, SC 88200-000</p>
         </div>
