portuguese grammar verified

--- a/public/contato.html
+++ b/public/contato.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="PT">
-
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -19,10 +18,8 @@
 
   <title>Ajepel Embalagens - Contato</title>
 </head>
-
 <body>
   <!-- Logo  -->
-  <!-- <a <img src="images/logo-samll2.jpeg" class="img-fluid float-right ml-3" alt="Responsive image"></a> -->
   <a name="top" <img class="logo"></a>
   <!-- menu superior -->
   <nav class="navbar navbar-expand-lg navbar-dark menu-bar" style="background-color: #1c1f64;">
@@ -73,7 +70,7 @@
           </div>
           <div class="form-group col-12">
             <label for="Mensagem">Mensagem</label>
-            <textarea class="form-control" id="contato-msg" name="textmsg" rows="3" placeholder="Conte nos sobre seu negocio e como podemos lhe ajudar."></textarea>
+            <textarea class="form-control" id="contato-msg" name="textmsg" rows="3" placeholder="Conte nos sobre seu negocio e como podemos-lhe ajudar."></textarea>
             <p class="bg-danger mt-2" id="error-msg">*** Favor preencher esse campo !</p>
           </div>
           <button id="submit-btn" class="btn btn-primary disab" type="submit" onclick="valida();">Enviar Mensagem</button>
@@ -95,7 +92,7 @@
             <i id="contato-alt" class="fab fa-2x fa-whatsapp"></i><span id="contato-alt-text" class="h5 ml-2">Whatsapp</span>
           </a>
           <a id="links-contato" href="tel:+5548996837078" class="wp-iccol-xs-12 col-sm-12 col-6 col-md-3">
-            <i id="contato-alt" class="fa fa-lg fa-phone mr-1 text-white"></i><span id="contato-alt-text" class="h5 ml-1 text-white">(48) 9 9683-7078</span>
+            <i id="contato-alt" class="fa fa-lg fa-phone mr-1 text-white"></i><span id="contato-alt-text" class="h5 text-white">(48)-99683-7078</span>
           </a>
         </div>
       </div>
