--- a/public/produtos.html
+++ b/public/produtos.html
@@ -64,7 +64,7 @@
 
       <h1 class="display-4 title-page-text animated fadeInLeftBig">Produtos</h1>
       <hr class="linha">
-      <p class="lead animated fadeInRightBig produtos-text-phrase"> Temos a solucao certa para voce e seu negocio, segue abaixo catalogo listado por categoria de produto.</p>
+      <p class="lead animated fadeInRightBig produtos-text-phrase"> Temos a solução certa para você e seu negócio, segue abaixo catalogo listado por categoria de produto.</p>
       <div class="container">
         <div class="row mb-2">
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
@@ -81,7 +81,7 @@
 
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <button id="btn3" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
-              Descartaveis
+              Descartáveis
             </button>
           </div>
 
@@ -93,7 +93,7 @@
 
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <button id="btn5" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
-              Escritorio
+              Escritório
             </button>
           </div>
 
@@ -111,19 +111,19 @@
 
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <button id="btn8" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
-              Limpeza /Higiene
+              Limpeza/Higiene
             </button>
           </div>
 
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <button id="btn9" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
-              Maquinas e Suportes
+              Máquinas e Suportes
             </button>
           </div>
 
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
             <button id="btn10" class="btn btn-secondary m-1 menu-products animated fadeIn delay-1s" type="button">
-              Plastico Bolha
+              Plástico Bolha
             </button>
           </div>
 
@@ -193,10 +193,10 @@
         </div>
       </div>
 
-      <!-- Secao Descartaveis -->
+      <!-- Secao Descartáveis -->
       <div id="descartaveis">
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1 category-product">Descartaveis</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Descartáveis</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -788,7 +788,7 @@
       <!-- Secao Escritorio -->
       <div id="escritorio">
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1 category-product">Escritorio</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Escritório</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1842,7 +1842,7 @@
       <!-- Secao Maquinas e Suportes  -->
       <div id="maquinas">
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1 category-product">Maquinas e Suportes</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Máquinas e Suportes</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -1963,7 +1963,7 @@
       <!-- Secao plastico bolha -->
       <div id="plastico">
         <hr class="linha">
-        <h2 class="text-center btn-secondary disabled border p-1 category-product">Plastico Bolha</h2><br>
+        <h2 class="text-center btn-secondary disabled border p-1 category-product">Plástico Bolha</h2><br>
         <div class="row">
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
