--- a/public/sobre.html
+++ b/public/sobre.html
@@ -56,9 +56,7 @@
       <h1 id="page-sub-title" class="display-4 title-page-text animated fadeInLeftBig">Sobre a Ajepel</h1>
       <hr class="linha">
       <img src="images/logo.jpeg" class="img-fluid animated fadeInRightBig delay-1s ml-3 mb-2 sobre-img" alt="Responsive image">
-      <p class="lead animated fadeInLeftBig delay-1s sobre-text">Fundada em 1998 por Osni Gonzaga da Silva, a Ajepel é uma distribuidora de embalagens que atua em Biguaçu, São José, Florianópolis, Palhoça, Antônio Carlos, Santo Amaro, Paulo Lopes,
-        Águas Mornas, Rancho Queimado e Angelina.
-        Trabalhamos com produtos de qualidade a preços competitivos, visando sempre a satisfação dos nossos clientes.</p>
+      <p class="lead animated fadeInLeftBig delay-1s sobre-text">Fundada em 1998 por Osni Gonzaga da Silva, a Ajepel é uma distribuidora de embalagens que atua em Biguaçu, São José, Florianópolis, Palhoça, Antônio Carlos, Santo Amaro, Paulo Lopes, Águas Mornas, Rancho Queimado e Angelina.Trabalhamos com produtos de qualidade a preços competitivos, visando sempre a satisfação dos nossos clientes.</p>
       <p class="lead animated fadeInLeftBig delay-2s sobre-text">A Ajepel conta com frota própria de veículos e de uma forma programada e ágil leva a mercadoria até você!
         Nossa equipe trabalha para promover a excelência no atendimento, sendo assim, contamos com os seguintes canais de relacionamento: Instagram, Facebook, Whatsapp e Telefones.</p>
     </div>
