portuguese grammar verified

--- a/public/produtos.html
+++ b/public/produtos.html
@@ -64,7 +64,7 @@
 
       <h1 class="display-4 title-page-text animated fadeInLeftBig">Produtos</h1>
       <hr class="linha">
-      <p class="lead animated fadeInRightBig produtos-text-phrase"> Temos a solução certa para você e seu negócio, segue abaixo catalogo listado por categoria de produto.</p>
+      <p class="lead animated fadeInRightBig produtos-text-phrase"> Temos a solução certa para você e seu negócio, segue abaixo catálogo listado por categoria de produto.</p>
       <div class="container">
         <div class="row mb-2">
           <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-2">
@@ -184,7 +184,7 @@
 
               <img src="images/products/CUPOM FISCAL/BOBINA TÉRMICA 80MM UM.jpg" alt="..." class="img-thumbnail">
               <hr>
-              <p class="card-text">BOBINA TÉRMICA 80MM UM</p>
+              <p class="card-text">BOBINA TÉRMICA 80MM UN</p>
             </div>
           </div>
 
@@ -525,27 +525,6 @@
               <p class="card-text">FITILHO DECORATIVO</p>
             </div>
           </div>
-
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL.jpg" alt="..." class="img-thumbnail">
-              <hr>
-              <p class="card-text">LAÇO FÁCIL</p>
-            </div>
-          </div>
-
-
-          <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
-            <div class="card card-body m-1">
-
-              <img src="images/products/EMBALAGENS PARA PRESENTES/LAÇO FÁCIL(1).jpg" alt="..." class="img-thumbnail">
-              <hr>
-              <p class="card-text">LAÇO FÁCIL</p>
-            </div>
-          </div>
-
 
           <div class="col-12 col-xs-6 col-sm-6 col-md-6 col-lg-3">
             <div class="card card-body m-1">
